--- a/UECS2354_GroupNumber_43/.classpath
+++ b/UECS2354_GroupNumber_43/.classpath
@@ -7,7 +7,8 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" output="testclasses" path="src/test/java"/>
-	<classpathentry kind="lib" path="C:/jar_files/JUnitParams-1.0.2.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="C:/jars/JUnitParams-1.0.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/jars/mockito-core-4.4.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
